# Reflection_MappedObjects

./: CMakeLists.txt  README.txt  install.sh
src/: CMakeLists.txt  reflected_functions.hh  reflected_layered_object.cc  reflected_layered_object.hh
tests/: CMakeLists.txt  test_reflected_layered_object.cc  test_reflected_value.cc  test_values.cc
